@@ -72,6 +72,9 @@ Trunk (unreleased changes)
 
     HADOOP-153. Provides a way to skip bad records. (Sharad Agarwal via ddas)
 
+    HADOOP-657. Free disk space should be modelled and used by the scheduler
+    to make scheduling decisions. (Ari Rabkin via omalley)
+
   IMPROVEMENTS
 
     HADOOP-3732. Delay intialization of datanode block verification till
